--- a/exploring-hacker-news-posts.ipynb
+++ b/exploring-hacker-news-posts.ipynb
@@ -450,7 +450,7 @@
     "\n",
     "However, the time zone for these hours (as well as the rest of the time data in the data set) is Eastern Standard Time; if you happen to live in a region of the globe that does not pertain to this specific time zone, you can find out what these hours are in your time zone using [The Time Zone Converter](https://www.thetimezoneconverter.com/).\n",
     "\n",
-    "For example, my time zone is Mountain Standard Time; Eastern Standard Time is two hours ahead of my time zone, so 1:00 p.m. (not 3:00 p.m.) is the best hour of the day for me to create posts in hopes of collecting the most amount of comments.\n",
+    "For example, my time zone is Mountain Standard Time; Eastern Standard Time is two hours ahead of my time zone, so 1:00 p.m. (not 3:00 p.m.) rather is the best hour of the day for me to create posts in hopes of collecting the most amount of comments.\n",
     "\n",
     "## Part 2: Analyzing the Number of Points for Ask HN and Show HN Posts\n",
     "\n",
@@ -609,6 +609,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Sorting and Printing Values from a List of Lists\n",
+    "\n",
+    "Once more, this unordered list of lists of hours and their corresponding averages makes it difficult to see the hours with the highest point values. To fix this, I'll sort the list of lists and present the five greatest values in a more readable format."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top 5 Hours for Show Posts Points:\n",
+      "\n",
+      "12:00: 10.55 average points per post\n",
+      "11:00: 7.73 average points per post\n",
+      "14:00: 7.48 average points per post\n",
+      "13:00: 7.46 average points per post\n",
+      "07:00: 6.98 average points per post\n"
+     ]
+    }
+   ],
+   "source": [
+    "swap_avg_by_hour = []\n",
+    "\n",
+    "for avg in avg_by_hour:\n",
+    "    hour = avg[0]\n",
+    "    avg_n_points = avg[1]\n",
+    "    \n",
+    "    swap_avg_by_hour.append([avg_n_points, hour])\n",
+    "    \n",
+    "sorted_swap = sorted(swap_avg_by_hour, reverse=True)\n",
+    "\n",
+    "print(\"Top 5 Hours for Show Posts Points:\\n\")\n",
+    "\n",
+    "template = \"{hour}:00: {avg_n_points:.2f} average points per post\" # Round average to two decimal places for readability\n",
+    "\n",
+    "for avg in sorted_swap[:5]:\n",
+    "    hour = avg[1]\n",
+    "    avg_n_points = avg[0]\n",
+    "    \n",
+    "    print(template.format(hour=hour, avg_n_points=avg_n_points))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the results above, you can see that the finest hour for making a post and likely receiving the largest amount of points is at noon. Yet posting at 11:00 a.m., 2:00 p.m., or 1:00 p.m. also isn't a bad idea if you want to have a higher chance of collecting points.\n",
+    "\n",
+    "Again, these hours are specific to Eastern Standard Time, so they may not be the same depending on if your time zone is different or not. Here is the tool for converting times between separate time zones: <a href=\"https://www.thetimezoneconverter.com/\" target=\"_blank\">The Time Zone Converter</a>. For instance, since my time zone is Mountain Standard Time, 10:00 a.m. (not 12:00 p.m.) is instead the golden hour of the day for me to gain the largest number of points for each post I create.\n",
+    "\n",
     "## Conclusion\n",
     "\n",
     "Throughout the whole of this project, I managed and manipulated a data set with thousands of records of posts to Hacker News.\n",
