--- a/exploring-hacker-news-posts.ipynb
+++ b/exploring-hacker-news-posts.ipynb
@@ -667,12 +667,22 @@
     "\n",
     "Throughout the whole of this project, I managed and manipulated a data set with thousands of records of posts to Hacker News.\n",
     "\n",
-    "My goal was to analyze the data to answer the following questions:\n",
+    "My goal was to analyze the data to answer a set of questions, and in conclusion, I came to these answers:\n",
     "\n",
     "- Do Ask HN or Show HN posts receive more comments on average?\n",
-    "- Do posts created at a certain time receive more comments on average?\n",
+    "    - Ask HN posts receive more comments on average.\n",
     "\n",
-    "In conclusion, I discovered that Ask HN posts receive more comments on average. Additionally, I found that posts created at 3:00 p.m., 1:00 p.m., and 12:00 p.m. respectively receive the most comments on average. However, these times apply specifically to Eastern Standard Time. In result, these hours may be different depending on what time zone you live in."
+    "\n",
+    "- Do posts created at a certain time receive more comments on average?\n",
+    "    - Posts created during the hours of 3:00 p.m., 1:00 p.m., and 12:00 p.m. respectively receive more comments on average. However, these times apply particularly to Eastern Standard Time. In result, these hours may be different depending on what time zone you live in.\n",
+    "\n",
+    "\n",
+    "- Do Ask HN or Show HN posts receive more points on average?\n",
+    "    - Show HN posts receive more points on average.\n",
+    "\n",
+    "\n",
+    "- Do posts created at a certain time receive more points on average?\n",
+    "    - Posts created during the hours of 12:00 p.m., 11:00 a.m., and 2:00 p.m. respectively receive more points on average. Once again, these hours aren't exactly the same for everyone."
    ]
   }
  ],
