--- a/exploring-hacker-news-posts.ipynb
+++ b/exploring-hacker-news-posts.ipynb
@@ -50,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, to make the data set easier to explore, I'll create a function named `explore_data()` that I can repeatedly use to print rows of data in a readable way. In addition, when I use this function, I'll have the option to output the number of rows and columns in the data set. After I define this function, I'll print the columns of the data set to understand what the data points represent. Lastly, I'll use this function to investigate a small selection of the data."
+    "Next, to make the data set easier to explore, I'll create a function named `explore_data()` that I can repeatedly use to print rows of data in a readable way. In addition, when I use this function, I'll have the option to output the number of rows and columns in the data set, which I'll definitely take advantage of. After I define this function, I'll print the columns of the data set to understand what the data points represent. Lastly, I'll use this function to investigate a small selection of the data."
    ]
   },
   {
@@ -99,7 +99,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can find the data set [here](https://www.kaggle.com/hacker-news/hacker-news-posts), but note that it has been reduced from almost 300,000 rows to approximately 20,000 rows by removing all submissions that did not receive any comments and then randomly sampling from the remaining submissions. Below are descriptions of the columns:\n",
+    "You can find and download the data set [here](https://www.kaggle.com/hacker-news/hacker-news-posts), but note that it has been reduced from almost 300,000 rows to approximately 20,000 rows by removing all submissions that did not receive any comments and then randomly sampling from the remaining submissions. Below are descriptions of the columns:\n",
     "\n",
     "- `id`: The unique identifier from Hacker News for the post\n",
     "\n",
@@ -152,7 +152,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, with the Ask HN, Show HN, and other posts separated, I'll explore the first five rows of each list to get a good sense of them and find out exactly how many posts are in each one."
+    "Finally, with the ask, show, and other posts separated, I'll explore the first five rows of each list of posts to get a good sense of them and find out exactly how many posts are in each one."
    ]
   },
   {
@@ -231,7 +231,7 @@
    "source": [
     "## Part 1: Analyzing the Number of Comments for Ask HN and Show HN Posts\n",
     "\n",
-    "In this first analysis, I'll complete the first half of my goal by taking a look at the comments of the Ask HN and Show HN posts in the data set to answer these questions:\n",
+    "Now that I've prepared the data, I'll start the first part of the analysis by taking a look at the comments of the Ask HN and Show HN posts to answer the first two questions of my goal:\n",
     "\n",
     "- Do Ask HN or Show HN posts receive more comments on average?\n",
     "\n",
@@ -239,7 +239,7 @@
     "\n",
     "### Calculating the Average Number of Comments\n",
     "\n",
-    "Firstly, I'll find out if ask posts or show posts receive more comments on average."
+    "Firstly, I'll find out if ask or show posts receive more comments on average."
    ]
   },
   {
@@ -283,16 +283,16 @@
    "source": [
     "As you can see in the output above, Ask HN posts receive five more comments on average than Show HN posts.\n",
     "\n",
-    "Since ask posts are more likely to receive comments, I'll focus my remaining analysis just on these posts.\n",
+    "Since ask posts are more likely to receive comments, I'll focus the remainder of this first part of the analysis just on these posts.\n",
     "\n",
-    "### Finding the Amount of Ask Posts and Comments by Hour Created\n",
+    "### Finding the Amount of Ask HN Posts and Comments by Hour Created\n",
     "\n",
-    "Next, I'll determine if ask posts created at a certain time are more likely to attract comments. I'll use the following steps to perform this analysis:\n",
+    "Next, I'll determine if Ask HN posts created at a certain time are more likely to attract comments. I'll use the following steps to perform this task:\n",
     "\n",
     "1. Calculate the amount of ask posts created in each hour of the day, along with the number of comments received.\n",
     "2. Calculate the average number of comments ask posts receive by hour created.\n",
     "\n",
-    "In this section, I'll tackle the first step — calculating the amount of ask posts and comments by hour created. I'll work with the data in the `created_at` column; I'll calculate the amount of ask posts created per hour, along with the total amount of comments."
+    "In this section, I'll tackle the first step — calculating the amount of Ask HN posts and comments by hour created. I'll work with the data in the `created_at` column; I'll calculate the amount of ask posts created per hour, along with the total amount of comments."
    ]
   },
   {
@@ -334,7 +334,7 @@
    "source": [
     "### Calculating the Average Number of Comments for Ask HN Posts by Hour\n",
     "\n",
-    "Now that I've gathered the number of ask posts created during each hour of the day and the corresponding number of comments ask posts created at each hour received, I can calculate the average number of comments for posts created during each hour of the day.\n",
+    "Having gathered the number of Ask HN posts created during each hour of the day and the corresponding number of comments those posts created at each hour received, I can calculate the average number of comments for posts created during each hour of the day.\n",
     "\n",
     "After completing this task, I'll display the results."
    ]
@@ -398,7 +398,7 @@
    "source": [
     "### Sorting and Printing Values from a List of Lists\n",
     "\n",
-    "Although the results I need are now there, this format makes it hard to identify the hours with the highest values. I'll finish the analysis by sorting the list of lists (the collection of each hour and its corresponding average number of comments) and printing the five highest values in a format that's easier to read."
+    "Although the results I need are now there, this format makes it hard to identify the hours with the highest values. I'll finish this first part of the analysis by sorting the list of lists (the group of each hour and its corresponding average number of comments) and printing the five highest values in a format that's easier to read."
    ]
   },
   {
@@ -429,7 +429,7 @@
     "    \n",
     "    swap_avg_by_hour.append([avg_n_comments, hour])\n",
     "    \n",
-    "sorted_swap = sorted(swap_avg_by_hour, reverse=True)\n",
+    "sorted_swap = sorted(swap_avg_by_hour, reverse=True) # List should be in descending order\n",
     "\n",
     "print(\"Top 5 Hours for Ask Posts Comments:\\n\")\n",
     "\n",
@@ -446,7 +446,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As the output above presents, the best hour for creating a post and having the highest chance of receiving comments is 3:00 in the afternoon. Of course, posting at 1:00 p.m. or 12:00 p.m. will also give you a higher chance at receiving comments.\n",
+    "As the output above presents, the best hour for creating a post and having the highest chance of receiving comments is 3:00 in the afternoon. Of course, posting at 1:00 p.m. or 12:00 p.m. will also give you a higher chance of receiving comments.\n",
     "\n",
     "However, the time zone for these hours (as well as the rest of the time data in the data set) is Eastern Standard Time; if you happen to live in a region of the globe that does not pertain to this specific time zone, you can find out what these hours are in your time zone using [The Time Zone Converter](https://www.thetimezoneconverter.com/).\n",
     "\n",
@@ -454,7 +454,7 @@
     "\n",
     "## Part 2: Analyzing the Number of Points for Ask HN and Show HN Posts\n",
     "\n",
-    "I've finished analyzing the number of comments ask posts and show posts gather. Now, I'll perform the same analysis, but this time I'll be working with the number of points ask posts and show posts receive. Using this data, I'll accomplish the second half of my goal by solving these problems:\n",
+    "I've finished analyzing the number of comments ask posts and show posts gather. Now, I'll repeat the first part of the analysis, but this time I'll be working with the number of points ask posts and show posts receive. Using this data, I'll accomplish the second half of my goal by solving these problems:\n",
     "\n",
     "- Do Ask HN or Show HN posts receive more points on average?\n",
     "\n",
@@ -462,7 +462,7 @@
     "\n",
     "### Calculating the Average Number of Points\n",
     "\n",
-    "I'll start this new analysis by using the `num_points` column (fourth column) of the Hacker News data set to find out if ask posts or show posts earn more points on average."
+    "I'll begin the second half of this analysis by using the `num_points` column (fourth column) of the Hacker News data set to find out if ask posts or show posts earn more points on average."
    ]
   },
   {
@@ -474,8 +474,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average number of points per ask post: 11\n",
-      "Average number of points per show post: 15\n"
+      "Average number of points per Ask HN post: 11\n",
+      "Average number of points per Show HN post: 15\n"
      ]
     }
    ],
@@ -496,21 +496,21 @@
     "avg_ask_points = total_ask_points / len(ask_posts)\n",
     "avg_show_points = total_show_points / len(show_posts)\n",
     "\n",
-    "print(\"Average number of points per ask post:\", round(avg_ask_points)) # Round average to the ones place for readability\n",
-    "print(\"Average number of points per show post:\", round(avg_show_points))"
+    "print(\"Average number of points per Ask HN post:\", round(avg_ask_points)) # Round average to the ones place for readability\n",
+    "print(\"Average number of points per Show HN post:\", round(avg_show_points))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the result of the code above, you can observe that an ask post gets 11 points on average, while a show post collects 15 points on average.\n",
+    "From the results of the code above, you can observe that an ask post gets 11 points on average, while a show post collects 15 points on average.\n",
     "\n",
-    "Because the average amount of points each show post receives is higher than that of each ask post (by 4 to be exact), I'll concentrate on dealing with show posts for the rest of this analysis.\n",
+    "Because the average amount of points each show post receives is higher than that of each ask post (by 4 to be exact), I'll concentrate on dealing solely with show posts for the rest of the analysis.\n",
     "\n",
-    "### Finding the Amount of Points in Show Posts by Hour Created\n",
+    "### Finding the Amount of Points in Show HN Posts by Hour Created\n",
     "\n",
-    "In this step, I'll compute the number of points accumulated during each hour of the day show posts were created. Just like in the previous analysis, I'll be using the data in the `created_at` column to perform this task."
+    "In this step, I'll compute the number of points accumulated during each hour of the day show posts were created. Just like in the previous part of the analysis, I'll be using the data in the `created_at` column to do this."
    ]
   },
   {
@@ -549,7 +549,7 @@
     "\n",
     "With each total amount of points collected by show posts throughout every hour of the day in place, I'm able to solve for the average number of points collected from show posts for each hour during the day (recall that I already have the quantity of posts created per hour of the day).\n",
     "\n",
-    "Once I gather this information, I'll output the results."
+    "I'll output this information once I gather it."
    ]
   },
   {
@@ -642,7 +642,7 @@
     "    \n",
     "    swap_avg_by_hour.append([avg_n_points, hour])\n",
     "    \n",
-    "sorted_swap = sorted(swap_avg_by_hour, reverse=True)\n",
+    "sorted_swap = sorted(swap_avg_by_hour, reverse=True) # List should be in descending order\n",
     "\n",
     "print(\"Top 5 Hours for Show Posts Points:\\n\")\n",
     "\n",
@@ -659,9 +659,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the results above, you can see that the finest hour for making a post and likely receiving the largest amount of points is at noon. Yet posting at 11:00 a.m., 2:00 p.m., or 1:00 p.m. also isn't a bad idea if you want to have a higher chance of collecting points.\n",
+    "Looking at the data above, you can see that the finest hour for making a post and likely receiving the largest amount of points is at noon. Yet posting at 11:00 a.m., 2:00 p.m., or 1:00 p.m. also isn't a bad idea if you want to have a higher chance of collecting points.\n",
     "\n",
-    "Again, these hours are specific to Eastern Standard Time, so they may not be the same depending on if your time zone is different or not. Here is the tool for converting times between separate time zones: <a href=\"https://www.thetimezoneconverter.com/\" target=\"_blank\">The Time Zone Converter</a>. For instance, since my time zone is Mountain Standard Time, 10:00 a.m. (not 12:00 p.m.) is instead the golden hour of the day for me to gain the largest number of points for each post I create.\n",
+    "Again, these hours are specific to Eastern Standard Time, so they may not be the same depending on if your time zone is different or not. Here is the tool for converting times between separate time zones: [The Time Zone Converter](https://www.thetimezoneconverter.com/). For instance, since my time zone is Mountain Standard Time, 10:00 a.m. (not 12:00 p.m.) is instead the golden hour of the day for me to gain the largest number of points for each post I create.\n",
     "\n",
     "## Conclusion\n",
     "\n",
@@ -674,7 +674,7 @@
     "\n",
     "\n",
     "- Do posts created at a certain time receive more comments on average?\n",
-    "    - Posts created during the hours of 3:00 p.m., 1:00 p.m., and 12:00 p.m. respectively receive more comments on average. However, these times apply particularly to Eastern Standard Time. In result, these hours may be different depending on what time zone you live in.\n",
+    "    - Posts created during the hours of 3:00 p.m., 1:00 p.m., and 12:00 p.m. respectively receive the most comments on average. However, these times apply particularly to Eastern Standard Time. In result, these hours may be different depending on what your time zone is.\n",
     "\n",
     "\n",
     "- Do Ask HN or Show HN posts receive more points on average?\n",
@@ -682,7 +682,7 @@
     "\n",
     "\n",
     "- Do posts created at a certain time receive more points on average?\n",
-    "    - Posts created during the hours of 12:00 p.m., 11:00 a.m., and 2:00 p.m. respectively receive more points on average. Once again, these hours aren't exactly the same for everyone."
+    "    - Posts created during the hours of 12:00 p.m., 11:00 a.m., and 2:00 p.m. respectively receive the most points on average. Once again, these hours aren't exactly the same for everyone."
    ]
   }
  ],
